@@ -38,6 +38,9 @@ bzr-svn 0.5.0~rc2				UNRELEASED
 
    * Support strange rename during push. (#303563)
 
+   * Print proper error when attempting to create repository in Subversion 
+     working copy. (#310063)
+
 bzr-svn 0.5.0~rc1			2008-12-08
 
   CHANGES
